--- a/index.html
+++ b/index.html
@@ -1,46 +1,34 @@
-<canvas id="graphCanvas" style="width: 300px; height: 300px;"></canvas>
+<!DOCTYPE html>
+<html lang="en-US">
 
-<script src="equation.js"></script>
-<script src="methods.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>DE Practicum</title>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script>
-    let canvas = document.getElementById('graphCanvas');
-    let points = euler(0, Math.SQRT1_2, 3, 10, evaluate);
-    let points1 = eulerP(0, Math.SQRT1_2, 3, 10, evaluate);
-    let points2 = runge(0, Math.SQRT1_2, 3, 10, evaluate);
+    <link rel="stylesheet" href="style.css" />
 
-    let graph = new Chart(canvas, {
-        type: 'line',
-        data: {
-            labels: points.map(p => +p.x.toFixed(3)),
-            datasets: [{
-                data: points.map(p => +p.y.toFixed(3))
-            }, {
-                data: points1.map(p => +p.y.toFixed(3))
-            },
-            {
-                data: points2.map(p => +p.y.toFixed(3))
-            }]
-        }
-    });
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    // let graph = new Chart(canvas, {
-    //     type: 'scatter',
-    //     data: {
-    //         datasets: [{
-    //             label: 'Scatter Dataset',
-    //             data: points
-    //         }]
-    //     },
-    //     options: {
-    //         scales: {
-    //             xAxes: [{
-    //                 type: 'linear',
-    //                 position: 'bottom'
-    //             }]
-    //         }
-    //     }
-    // });
+    <script src="scripts/controller.js"></script>
+    <script src="scripts/equations.js"></script>
+    <script src="scripts/methods.js"></script>
+</head>
 
-</script>
+<body>
+
+    <form>
+        Range begins:
+        <input id="x0" type=number step=0.001 /> <br />
+        Initial value:
+        <input id="y0" type=number step=0.001 /> <br />
+        Range ends:
+        <input id="X" type=number /> <br />
+        Number of steps:
+        <input id="N" type=number min=1 step=1 /> <br />
+    </form>
+
+    <canvas style="width: 300px; height: 300px;"></canvas>
+
+</body>
+
+</html>
