--- a/index.html
+++ b/index.html
@@ -10,27 +10,36 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
+    <script src="scripts/dataBind.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/equations.js"></script>
     <script src="scripts/methods.js"></script>
 </head>
 
 <body>
-    <div id="graph">
+    <div id="graph" class="section">
         <div id=input>
-            <p>Range begins</p>
-            <input id="x0" type=number step=0.001 />
-            <p>Initial value</p>
-            <input id="y0" type=number step=0.001 />
-            <p>Range ends</p>
-            <input id="X" type=number />
-            <p>Number of steps</p>
-            <input id="N" type=number min=1 step=1 />
-            <p>Step length</p>
-            <input id="h" type=number readonly />
+            <div class="param">
+                <p>x0</p>
+                <input id="x0" type=number value=0 step=0.001 />
+            </div>
+            <div class="param">
+                <p>y0</p>
+                <input id="y0" type=number value=0.7071 step=0.001 />
+            </div>
+            <div class="param">
+                <p>X</p>
+                <input id="X" type=number value=3 />
+            </div>
+            <div class="param">
+                <p>N</p>
+                <input id="N" type=number value=10 min=1 step=1 />
+            </div>
         </div>
-        <div><canvas></canvas></div>
+        <div id="canvas"><canvas></canvas></div>
     </div>
+
+    <iframe id="report" src="report.html" seamless style="width: 100%; height: 1000px;"></iframe>
 </body>
 
 </html>
