--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="scripts/dataBind.js"></script>
     <script src="scripts/controller.js"></script>
     <script src="scripts/equations.js"></script>
-    <script src="scripts/methods.js"></script>
+    <script src="scripts/approximations.js"></script>
 </head>
 
 <body>
