--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    <script src="scripts/dataBind.js"></script>
-    <script src="scripts/controller.js"></script>
-    <script src="scripts/equations.js"></script>
-    <script src="scripts/approximations.js"></script>
+    <script type="module" src="scripts/dataBind.js"></script>
+
 </head>
 
 <body>
