--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    <script type="module" src="scripts/dataBind.js"></script>
+    <script type="module" src="scripts/initializer.js"></script>
 
 </head>
 
